assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    font-family: 'Montserrat', sans-serif;
}

/* Header */
header {
    background-color: blueviolet;
    color: #fff;
    display: flex;
    justify-content: space-evenly;
    position: fixed;
    width: 100%;
    align-items: center;
    padding: 0.6rem;
    z-index: 99;
    box-shadow: 0 2px 20px #fff;
}

.active {
    background-color: #fff;
    color: blueviolet;
    border-bottom: 1px solid #000000;
    padding: 0 0.5em;
    font-weight: bold;
}

.logo {
    display: flex;
    justify-content: center;
    align-items: flex-start;
}

h1,
h2,
h3 {
    text-transform: uppercase;
    letter-spacing: 3px;
}

header a {
    text-decoration: none;
    color: rgb(254, 253, 255);
}

header h1 {
    display: inline-block;
    /*To make the FIT Lifestyle text in the center position */
    padding-top: 33px;
}

header img {
    width: 100px;
    height: 100px;
    border-radius: 50%;
    padding: 10px;
}

.menu li {
    list-style-type: none;
    display: flex;
    justify-content: center;
    padding: 0.25rem;
    display: inline-block;
}

/* Navbar styles with dropdown toggle */
nav {

    position: absolute;
    background-color: blueviolet;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    top: 100%;
    color: #fff;
    display: none;
    align-items: flex-end;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

/* Main content */
main {
    /* Enlarge main element to push footer down*/
    flex: 1 0 auto;
    /* Add margin top so no content will be covered in header */
    margin-top: 124px;
    /* Enable flex properties for child elements */
    display: flex;
    flex-direction: column;
    width: 100%;
    justify-content: center;
    align-items: center;
}
/*page 1*/
/* Hero section */
.hero {
    background: url(../images/hero_image.webp) no-repeat center center/cover;
    background-position: 70%;
    height: 500px;
    width: 100%;
    position: relative;
}

.hero-text {
    background-color: rgba(174, 0, 255, .10);
    /* Gave bg color same height as bg image to give it a purple tint */
    height: 500px;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #fff;
    text-decoration-style: solid;
    font-style: italic;
    font-weight: bold;
    text-align: center;
}

.motivation {
    padding: 1rem 1rem;
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.physical-benefits, .mental-benefits {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    border: 3px solid rgb(30, 24, 37);
    padding: 10px 10px;
    width: 45%;
    margin-bottom: 5px;
    margin-left: 51px;
    height: 246px;
    overflow: auto;
  }

.pb-img img, .mb-img img{
    height: 25vh;
    width: auto;
    padding: 1rem 0.25rem;
  }

.workout-benefits {
    letter-spacing: normal;
    display: inline-block;
    /*flex direction - column to keep the content in div vertical 
    flex-direction: column; */
}

.workout-pm-benefits, .healthy-meals-pm-benefits {
    display: flex;
    padding: 50px 0;
}

.workout-benefits h2,
h3 {
    text-decoration: solid;
    letter-spacing: normal;
    text-align: left;
    text-decoration-line: underline;
}

.healthy-meals-benefits h2,
h3 {
    text-decoration: solid;
    letter-spacing: normal;
    text-align: left;
    text-decoration-line: underline;
}

.physical-benefits ul {
    list-style-type: none;
}

.mental-benefits ul {
    list-style-type: none;
}

/*Page 2*/
.workout-routines {
    padding: 1rem 1rem;
}

.workout-routines ul {
    list-style-type: none;
}

video {
    width: 200px;
}

.meal-preps {
    padding: 1rem;
}

.meal-preps h2 {
    letter-spacing: normal;
    text-align: center;
    text-decoration: solid;
    text-decoration-line: underline;
}

table {
    background: rgb(225, 209, 241);
    border-collapse: collapse;
    width: 100%;
}

caption,
td,
th {
    padding: 1rem;

}

caption {
    background-color: rgb(110, 66, 151);
    color: #fff;
    font-size: 1.2rem;
    font-weight: bold;
    text-transform: uppercase;
}

th {
    background: rgb(225, 209, 241);
    text-decoration: solid;
    text-decoration-line: underline;
}

tr:nth-of-type(2n) {
    background-color: rgb(204, 167, 239);
}

.signup-page {
    background-image: url("../images/Sign_up_bg.webp");
    background-size: cover;
    background-position: 50%;
    flex-grow: 1;
    color: #fff;
    padding: 1rem;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    /* height: 100vh; */
    /* text-align: center; */
}

.signup-form {
    /* Adding opacity to form to make it more visible */
    background-color: rgba(110, 66, 151, 0.6);
    padding: 20px;
    box-shadow: 0 15px 20px #fff;
    display: block;
    max-width: 700px;
    border-radius: 50px;
}

.signup-form, form > h2,
form > h3,
.p-center {
    text-align: center;
    text-decoration-line: none;
    padding-bottom: 10px;
}

.form-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}


.user-input-box:nth-child(2n) {
    justify-content: end;
}

.user-input-box {
    display: flex;
    flex-wrap: wrap;
    width: 50%;
    padding-bottom: 15px;
}

.user-input-box label {
    width: 95%;
    font-size: 15px;
}

.input {
    height: 40px;
    width: 95%;
    padding: 0 10px;
    border-radius: 10px;
    border: 1px solid blueviolet;
    margin: 5px 0;
    font-weight: bold;
    
}

.textarea {
    /* Add display none as no need for feedback for now */
    display: none;
    align-items: center;
    padding-top: 10px;
}

/* To use when textarea for feedback is displayed
.feedback-space {
    border-radius: 10px;
    border: 1px solid blueviolet;
    margin: 5px 0;
    font-weight: bold;
}
    */

/* placeholder {
    color: #000000;
} */

.note {
    font-size: 14px;
    font-style: italic;
    padding: 10px;
    text-align: center;
}

.note a {
    text-decoration: none;
    color: bisque;
}

.note a:hover {
    text-decoration: underline;
    color: blue;
}

button {
    margin: 5px 10px;
    padding: 15px;
    /* width: 100%; */
    font-size: 15px;
    border-radius: 10px;
    border: 1px solid #fff;
    color: #fff;
    background-color: blueviolet;
}

.send-clear-buttons {
    display: flex;
    justify-content: center;
    /*To position the 2 buttons in center of form, solved via devtools */
    width: -webkit-fill-available;
}

button:hover {
    border: 1px solid blueviolet;
    color: blueviolet;
    background-color: #fff;
}

/* To make the buttons side to each other with gap between them*/
.gender-buttons {
    display: contents;
    padding-top: 10px;
}

.hide {
    display: none;
}

/* Footer */
footer {
    background-color: blueviolet;
    flex-shrink: 0;
    color: #fff;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 2rem;
    text-align: center;

}

/* Hide irrelevant h1 */
.social-media h1 {
    display: none;
}

.social-networks {
    list-style-type: none;
    display: inline-block;
    align-items: center;
    text-align: center;

}

.social-media {
    width: 50%;
    justify-content: space-evenly;
}

.social-media li {
    display: flex;

}

.social-networks i {
    color: #fff;
    padding: 5%;
}

.social-networks li {
    display: inline-block;

}

/* Media query: large or landscape phones (780px and up) */
@media screen and (max-width: 780px) {
    th {
        display: none;
    }

    td {
        display: grid;
    }

    td:first-child {
        padding-top: 2rem;
    }

    td:last-child {
        padding-bottom: 2rem;
    }

    td::before {
        font-weight: bold;
        text-transform: capitalize;
    }

    td:nth-of-type(1)::before {
        content: "day";
    }

    td:nth-of-type(2)::before {
        content: "breakfast: ";
    }

    td:nth-of-type(3)::before {
        content: "lunch:";
    }

    td:nth-of-type(4)::before {
        content: "evening meal:";
    }

    td:nth-of-type(5)::before {
        content: "snacks:";
    }

}

@media screen and (max-width:780px) {
    .signup-form {
        min-width: 280px;
    }

    .user-input-box {
        margin-bottom: 10px;
        width: 100%;
    }

    .user-input-box:nth-child(2n) {
        justify-content: space-between;
    }

    .gender-buttons {
        display: flex;
        justify-content: space-between;
        width: 100%;
    }

    .signup-page {
        background-position: 58%;
    }

    /*Having scroll on mobile device might not be a good user exp */
    /*.form-content {
        max-height: 400px;
        overflow: auto;
    } 

    .form-content::-webkit-scrollbar {
        width: 0;
    } */
}


/* Media query: tablets and larger (833px and up) */
@media screen and (min-width: 833px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }

    #menu {
        display: flex;
    }

    .nav-toggle-label {
        display: none;
    }

    .hero {
        background-position: 50%;

    }
}

/* Large devices (laptops and desktops, 992px and up) */
@media screen and (min-width: 992px) {
    .menu a:hover {
        border: 1px solid blueviolet;
        color: blueviolet;
        background-color: #fff;
    }
}

